v1.15.2: blue backspace key, tiered algorithm names, fix cloud Java 17 release flag